--- a/src/components/Setting.module.scss
+++ b/src/components/Setting.module.scss
@@ -4,6 +4,7 @@
   border-radius: 40px;
   margin: 0 auto;
   padding: 20px;
+  // margin-top: 100px;
 }
 
 .inner {
@@ -17,9 +18,9 @@
 }
 
 .buttonWrapper {
-    margin-top: 19px;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 92px;
-    width: 541px;
+  margin-top: 19px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 92px;
+  width: 541px;
 }
