--- a/src/components/ResultBar.module.scss
+++ b/src/components/ResultBar.module.scss
@@ -11,6 +11,7 @@
   height: 223px;
   background-size: contain;
   background-repeat: no-repeat;
+  position: relative;
 }
 
 .wrapperSweet {
@@ -20,8 +21,23 @@
   height: 223px;
   background-size: cover;
   background-color: rgba(255, 255, 255, 0.9);
+  background-image: url("../../public/image/background/Maskgroup.png");
   border-radius: 40px;
   border: 15px solid rgba(0, 0, 0, 0.05);
+  position: relative;
+}
+
+.wrapperScore {
+  display: flex;
+  justify-content: space-around;
+  width: 890px;
+  position: relative;
+  z-index: 1;
+}
+
+.image {
+  position: absolute;
+  z-index: -1;
 }
 
 .scorePlace {
@@ -30,6 +46,8 @@
   height: 131px;
   background-color: rgba(0, 0, 0, 0.06);
   box-shadow: inset 0px 0px 25px 0px rgba(0, 0, 0, 0.25);
+  z-index: 100;
+  position: relative;
 }
 
 .arrowWrapper {
@@ -69,23 +87,20 @@
 }
 
 .arrowWrapper {
-  &__des {
-    display: flex;
-    margin-bottom: 10px;
-    margin-left: 9px;
-    margin-right: 9px;
-    width: 358px;
-    overflow: hidden;
-    align-items: center;
-    position: relative;
-    font-weight: 600;
-    font-size: 36px;
-    color: #fff;
-    -webkit-text-stroke: 2px #242546;
-    letter-spacing: -4px;
-
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
+  display: flex;
+  margin-bottom: 10px;
+  margin-left: 9px;
+  margin-right: 9px;
+  width: 358px;
+  overflow: hidden;
+  align-items: center;
+  position: relative;
+  font-weight: 600;
+  font-size: 36px;
+  color: #fff;
+  -webkit-text-stroke: 2px #242546;
+  letter-spacing: -4px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   &__textAsc {
     display: block;
@@ -101,4 +116,20 @@
     transform: translate(0%, -55%);
     right: 1%;
   }
+}
+
+.gameText {
+  display: block;
+  position: absolute;
+  font-weight: 600;
+  font-size: 56px;
+  color: #fff;
+  -webkit-text-stroke: 2px #242546;
+  letter-spacing: -4px;
+  top: 55%;
+  left: 50%;
+  // margin-bottom: 150%;
+  // margin-left: 55%;
+  transform: translate(-50%, -60%);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
