--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,6 @@
 .home {
-    color: red;
-    // background-color: gold;
-    width: 100%;
-    height: 100vh;
-    background-image: url("../../public/home.jpg");
+  width: 100%;
+  height: 100vh;
+  background-image: url("../../public/home.jpg");
+  padding-top: 100px;
 }
