--- a/src/components/ResultBar/ResultBar.module.scss
+++ b/src/components/ResultBar/ResultBar.module.scss
@@ -4,39 +4,46 @@
   width: 890px;
 }
 
-.wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 223px;
-  background-size: contain;
-  background-repeat: no-repeat;
+.wrapperBg {
+  display: block;
   position: relative;
-}
-
-.wrapperSweet {
-  display: flex;
-  align-items: center;
   justify-content: space-around;
   height: 223px;
   background-size: cover;
-  background-color: rgba(255, 255, 255, 0.9);
-  background-image: url("../../public/image/background/Maskgroup.png");
   border-radius: 40px;
-  border: 15px solid rgba(0, 0, 0, 0.05);
-  position: relative;
+  &_snow {
+    background-image: url("../../../public/image/background/resultSnow.png");
+  }
+  &_gold {
+    background-image: url("../../../public/image/background/resultBrown.png");
+  }
+  &_sweet {
+    background-image: url("../../../public//image/background/resultSweet.jpg");
+  }
 }
 
 .wrapperScore {
   display: flex;
   justify-content: space-around;
   width: 890px;
-  position: relative;
+  position: absolute;
   z-index: 1;
+  top: 40px;
+}
+
+.wrapperResult {
+  display: flex;
+  justify-content: space-around;
+  width: 890px;
+  position: absolute;
+  z-index: 1;
+  top: 45px;
 }
 
 .image {
   position: absolute;
+  width: 890px;
+  height: 223px;
   z-index: -1;
 }
 
@@ -46,8 +53,18 @@
   height: 131px;
   background-color: rgba(0, 0, 0, 0.06);
   box-shadow: inset 0px 0px 25px 0px rgba(0, 0, 0, 0.25);
-  z-index: 100;
+}
+
+.scorePlace__result {
+  width: 131px;
+  height: 131px;
   position: relative;
+}
+
+.scorePlace__result_empty {
+  width: 131px;
+  height: 131px;
+  opacity: 0;
 }
 
 .arrowWrapper {
@@ -118,7 +135,7 @@
   }
 }
 
-.gameText {
+.resultNumbers {
   display: block;
   position: absolute;
   font-weight: 600;
@@ -128,8 +145,6 @@
   letter-spacing: -4px;
   top: 55%;
   left: 50%;
-  // margin-bottom: 150%;
-  // margin-left: 55%;
   transform: translate(-50%, -60%);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
