--- a/src/ui/Range/Range.module.scss
+++ b/src/ui/Range/Range.module.scss
@@ -20,45 +20,22 @@
   font-size: 32px;
 }
 
-// .option {
-//   display: flex;
-//   padding: 0 5px 0 5px;
-//   justify-content: space-between;
-//   overflow: hidden;
-//   // font-style: bold;
-//   font-weight: 700;
-//   font-size: 32px;
-//   color: #4f4b61;
-//   align-items: center;
-//   text-align: center;
-//   &__small {
-//     width: 366px;
-//   }
-//   &__large {
-//     width: 531px;
-//   }
-// }
-
 .option {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 24px;
   display: flex;
   justify-content: space-between;
   height: auto;
   overflow: hidden;
   margin-top: 16px;
-  // margin-left: 20px;
+  letter-spacing: -1px;
   margin-right: 0px;
-  &__small {
-    // width: 366px;
-  }
   &__large {
-    // width: 531px;
+    margin-left: 18px;
   }
 }
 
 .range {
-  // width: 366px;
   height: 21px;
   border-radius: 10px;
   background-color: #ffd748;
@@ -66,24 +43,13 @@
   -moz-appearance: none;
   appearance: none;
 
-  // &::-ms-thumb {
-  //   background-color: blue;
-  // }
-
-  // &::-webkit-slider-thumb {
-  //   background-color: blue;
-  // }
-
   &::-moz-range-thumb {
     background-color: #104987;
     border: none;
-    width: 23px;
-    height: 23px;
+    width: 25px;
+    height: 25px;
     border-radius: 25px;
-    // border: 1px solid cyan;
-    // border-radius: 10px/100%;
     cursor: pointer;
-    // transition: 1s;
   }
 
   &__small {
@@ -93,7 +59,7 @@
     width: 531px;
   }
 
-  &:hover{
+  &:hover {
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
