correct build ver

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -45,7 +45,8 @@
 }
 
 .text {
-  margin: 0 auto;
+  width: 80%;
+  text-align: center;
   color: #5f40a1;
   font-size: 40px;
   line-height: 51px;
