--- a/src/styles/ItemsFiels.scss
+++ b/src/styles/ItemsFiels.scss
@@ -64,3 +64,35 @@ $indent: 160px;
   transform: translate(-50%, -60%);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+@media (max-width: 912px) {
+  .wrapper {
+    width: 90%;
+  }
+  $indent: 20%;
+  .itemWrapper {
+    width: 100px;
+    height: 100px;
+
+    &__1 {
+      top: 130px;
+      left: 0;
+    }
+    &__2 {
+      top: 0;
+      left: $indent;
+    }
+    &__3 {
+      top: 130px;
+      left: calc(2 * $indent);
+    }
+    &__4 {
+      top: 0;
+      left: calc(3 * $indent);
+    }
+    &__5 {
+      top: 130px;
+      left: calc(4 * $indent);
+    }
+  }
+}
